# plutarch-merkle-tree

./: .gitignore  README.md  flake.nix  plutarch-merkletree.cabal
app/: Main.hs
assets/test-reports/: merkletree.txt
src/: Utils.hs
src/Plutarch/: EitherData.hs  MerkleTree.hs
src/Plutus/: MerkleTree.hs
test/: README.md  Spec.hs
test/Spec/: MerkleTreeSpec.hs
